src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
/* ... */
.blog-info-desktop-lg h3 {
    color: #fff;
    font-family: SairaSemiCondensed-Bold;
}

a {
    color: var(--moonglade-accent-color1);
    text-decoration: none;
}

    a:hover,
    a:focus {
        color: var(--moonglade-accent-color1);
        text-decoration: none;
    }

.bg-moonglade-accent1 {
    background-color: var(--moonglade-accent-color1);
}

.bg-moonglade-accent2 {
    background-color: var(--moonglade-accent-color2);
}

.bg-moca-dark {
    background-color: #171717;
}

.navbar {
    box-shadow: 0 0 8px #666;
    padding: .4rem 1rem
}

.nav-item {
    margin: 0 1rem 0 0;
}

footer {
    color: rgba(255,255,255,0.5);
    padding-bottom: 20px;
    padding-top: 20px;
}

    footer .container h4 {
        color: rgba(255,255,255, 0.6);
        font-size: 20px;
        font-weight: lighter;
        margin-bottom: 31px;
        text-transform: uppercase;
    }

.form-control#term {
    border-width: 0;
    box-shadow: none;
    color: #fff;
    margin-right: 0 !important;
    width: 226px;
}

    .form-control#term::-webkit-input-placeholder {
        color: white !important;
    }

    .form-control#term:-moz-placeholder { /* Firefox 18- */
        color: white !important;
    }

    .form-control#term::-moz-placeholder { /* Firefox 19+ */
        color: white !important;
    }

    .form-control#term:-ms-input-placeholder {
        color: white !important;
    }

.form-control#search:focus {
    -ms-box-shadow: none;
    -webkit-box-shadow: none;
    border-color: var(--moonglade-accent-color1);
    box-shadow: none;
}

.search-form {
    background: rgba(255, 255, 255, .2);
    border-radius: 3px;
}

.btn-search {
    background: transparent;
    border: 0 none;
    font-size: 1.3rem;
    height: 36px;
    padding: 0 0.6rem;
}

.btn-primary {
    background-color: #124078;
    border-color: #0e315d;
}

.page-link {
    color: var(--moonglade-accent-color1);
}

.comment-form-containter .badge {
    font-size: 100% !important;
}

.nav-item-non-margin {
    margin: 0 0;
}

.dropdown-menu {
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
}

.navbar .dropdown-menu {
    background-color: var(--moonglade-accent-color1);
    border: 0;
    color: #fff;
    font-size: 0.9rem;
}

    .navbar .dropdown-menu .dropdown-item {
        color: #FFF;
        line-height: 1.7rem;
    }

.navbar .dropdown-item.active, .dropdown-item:hover {
    background-color: var(--moonglade-accent-color3);
    color: #fff;
    text-decoration: none;
}

footer a {
    color: rgba(255,255,255,0.7);
}

    footer a:hover {
        color: #FFF;
    }

.qrcode-link a {
    color: rgba(255,255,255,0.5);
    cursor: pointer;
    display: inline-block;
    font-size: 25px;
    margin-right: 10px;
}

    .qrcode-link a:hover {
        color: #FFF;
    }

html, body {
    height: 100%;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background: #CECECE;
}

::selection {
    background-color: rgba(43, 87, 154, .15);
    color: inherit;
    text-shadow: none;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei";
    font-size: 0.9rem;
    padding-top: 50px;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5 {
    font-weight: normal;
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.7);
}

    .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
        color: white;
    }

.nav-link strong {
    font-weight: 500;
}

.moonglade-logo {
    font-family: SairaSemiCondensed-Bold;
    font-size: 28px;
    line-height: 1px;
}

.toptags-list a {
    background-color: var(--moonglade-accent-color1);
    color: #fff;
    display: inline-block;
    margin-bottom: 10px;
    margin-right: 1px;
    padding: 5px 10px;
}

    .toptags-list a:hover {
        background-color: var(--moonglade-accent-color3);
        color: #fff;
    }

.lightswitch {
    height: 32px;
    width: 32px;
    position: fixed;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
    text-align: center;
    background: #fff;
}

#lighticon {
    transform: translate(0,50%);
    display: block;
}

